--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Alrik",
-  "description": "Build an Erection wit!",
+  "description": "no",
   "version": "1.0",
   "manifest_version": 1
 }
