--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Alrik",
-  "description": "Yamete Kudasai",
+  "description": "Yamete Kudasai *horny noises from qiqi*",
   "version": "1.0",
   "manifest_version": 1,
   "cum": true
