--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,7 @@
   "description": "Yamete Kudasai *horny noises from qiqi*",
   "version": "1.0",
   "manifest_version": 1,
-  "cum": true
+  "cum": true,
+  "Jiaqi": "Awww alrikyou're a nuaghty boi",
+  "Alrik": "Punish me daddy"
 }
