--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,6 @@
   "name": "Alrik",
   "description": "no",
   "version": "1.0",
-  "manifest_version": 1
+  "manifest_version": 1,
+  "Alrik": "likes cum"
 }
