--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
   "description": "no",
   "version": "1.0",
   "manifest_version": 1,
-  "Alrik": "likes cum"
+  "Alrik": "likes cum",
+  "Deez": "Nuts"
 }
