--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,5 @@
   "name": "Alrik",
   "description": "no",
   "version": "1.0",
-  "manifest_version": 1,
-  "Alrik": "likes cum",
-  "Deez": "Nuts"
+  "manifest_version": 3
 }
