--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Alrik",
-  "description": "no",
+  "description": "Detect sarcasm so you know if the person who sent 'go kys' is toxic or just joking.",
   "version": "1.0",
   "manifest_version": 3
 }
