--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,8 @@
   "name": "Alrik",
   "description": "Detect sarcasm so you know if the person who sent 'go kys' is toxic or just joking.",
   "version": "1.0.0",
-  "manifest_version": 3
+  "manifest_version": 3,
+  "background": {
+    "stuffs": "stuff.js"
+  }
 }
