--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,8 @@
   "background": {
     "service_worker": "stuff.js"
   },
-  "permissions": ["storage"]
+  "permissions": ["storage"],
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
