--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,6 @@
   },
   "permissions": ["storage"],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "sussypopup.html"
   }
 }
