--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "background": {
     "service_worker": "stuff.js"
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "activeTab", "scripting"],
   "action": {
     "default_popup": "sussypopup.html",
     "default_icon": {
