--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Alrik",
+  "name": "kirlA",
   "description": "Detect sarcasm so you know if the person who sent 'go kys' is toxic or just joking.",
   "version": "1.0.0",
   "manifest_version": 3,
