--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Setting The Tone",
-  "description": "Detect sarcasm so you know if the person who sent 'go kys' is toxic or just joking.",
+  "description": "Github is trash.",
   "version": "1.0.0",
   "manifest_version": 3,
   "background": {
